creation of footer of the index page

--- a/LOrEnvironnement.html
+++ b/LOrEnvironnement.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--lien pour la bibliothèque BootStrap CSS locale mais pas de lien pour JS -->
     <link rel="stylesheet" href="../css/bootstrap.css">
-    <!-- lien pour les fontes googleapis Robotocondensed>
+    <!-- lien pour les fontes googleapis Robotocondensed -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
@@ -43,52 +43,61 @@
     </nav>
     </header>
     <main >  
-        <div class="container-fluid row g-0 mt-5">
+        <div class="container row g-1 mt-5 ">
             <h1 class="mt-5 fw-bold text-center" > Association L'Or Environnement</h1>
-            <div class="card col-12 col-md-4 me-3">
+            <div class="card col-12 col-md-4 m-3">
                 <img src="jardin-potager.jpg" class="card-img-top" alt="un jardin potager">
                 <div class="card-body text-center">
-                    <h2 class="card-title">Jardins Partagés</h3>
-                    <h3 class="card-subtitle">à Mauguio</h5>
+                    <h2 class="card-title">Jardins Partagés</h2>
+                    <h3 class="card-subtitle">- Mauguio -</h3>
                     <p class="card-text my-4">Rejoignez nous pour cultiver ce jardin potager. 
                         Sur cette terre de 1 hectare, nous travaillons la terre en commun
                     et partageons ses récoltes, arbres fruitiers, légumes. Rejoignez nous! </p>
                     <a href="#" class="btn btn-success">En construction</a>
                 </div>
             </div>
-            <div class="card col-12 col-md-3 me-3">
+            <div class="card col-12 col-md-4 m-3">
                 <img src="conference.jpg" class="card-img-top" alt="un conférencier parle à la foule">
                 <div class="card-body text-center">
-                    <h2 class="card-title">Conferences et débats</h3>
-                    <h3 class="card-subtitle">à Mauguio</h5>
+                    <h2 class="card-title">Conferences et débats</h2>
+                    <h3 class="card-subtitle">- Mauguio -</h3>
                     <p class="card-text my-4">Régulièrement organisation de conférences et débats 
                         sur le thème de l'environnement, voir agenda </p>
                     <a href="#" class="btn btn-success">En construction</a>
                 </div>
             </div>
-            <div class="card col-12 col-md-3 me-3">
-                <img src="france-map.png" class="card-img-top" alt="...">
+            <div class="card col-12 col-md m-3">
+                <img src="france-map.png" class="card-img-top" alt="carte des régions de France">
                 <div class="card-body text-center">
-                    <h2 class="card-title">Actualités Environnement</h3>
-                    <h3 class="card-subtitle mb-4">National</h5>
-                    <p class="card-text my-4">Notre association vous informe des progrès des mesures 
-                        environnementales nationales ainsi que des initiatives locales</p>
+                    <h2 class="card-title">Actualités</h2>
+                    <h3 class="card-subtitle mb-4">- National -</h3>
+                    <p class="card-text my-4">Notre association vous informe des initiatives locales et nationales en France</p>
                     <a class="btn btn-success" href="National.html">En savoir plus</a>
                 </div>
             </div>
         </div>
        
     </main>
-    <footer>
-
-        
+    <footer class="container row g-1 m-3 bg-success-subtle"> 
+            <div class="col-md-5 mb-3">
+                <div class="box">
+                    <h3>Contact</h3>
+                    <img src="envelope-at.svg" alt="image courriel">
+                    <a href="mailto:example@example.com">
+                        <i class="bi bi-envelope-at"></i>example@example.com
+                    </a>
+                    <br>
+                    <img src="telephone.svg" alt="image téléphone"> 07-xx-xx-xx-xx
+                </div>
+            </div>
+            <div class="col-md-5 mb-3">
+                <div class="box">
+                    <h3>Lieu</h3>
+                    <iframe width="300" height="200" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d92471.1260814314!2d3.9302748916979944!3d43.591492186026116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b6a310cec356c1%3A0x4078821166ac570!2s34130%20Mauguio!5e0!3m2!1sfr!2sfr!4v1686048053749!5m2!1sfr!2sfr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
     </footer>
-
-</body>
-<!-- Bootstrap JavaScript -->
-<script src="../js/bootstrap.bundle.min.js"></script>
-
-<!-- Our JavaScript -->
-<!--script src="script.js"></script> -->
+    <!-- Bootstrap JavaScript -->/
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
