1st rev of MentionsLegales.html and updates of index page

--- a/LOrEnvironnement.html
+++ b/LOrEnvironnement.html
@@ -36,7 +36,7 @@
                 <div class="navbar-nav justify-content-center align-items-center">
                     <button class="btn btn-success" onclick="window.location.href='LOrEnvironnement.html'">Accueil</button>
                     <button class="btn btn-success" onclick="window.location.href='National.html'">National</button>
-                    <button class="btn btn-success" onclick="window.location.href='Mentions légales'">Mentions légales</button>
+                    <button class="btn btn-success" onclick="window.location.href='MentionsLegales.html'">Mentions légales</button>
                 </div>
             </div>
         </nav>
