add local bootstrap files and update their reference, plus launch in README.md' q

--- a/LOrEnvironnement.html
+++ b/LOrEnvironnement.html
@@ -11,7 +11,7 @@
     soutient les initiatives environnementales locales sur le Pays de l'Or">
     <meta name="author" content="Veronique Knight">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap.css">
     <!-- lien pour les fontes googleapis Robotocondensed -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -110,6 +110,6 @@
         </div>
     </footer>
     <!-- Bootstrap JavaScript -->/
-    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
 </body>
 </html>
