--- a/National.html
+++ b/National.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Veronique Knight">
     <meta name="format-detection" content="telephone=no">
     <!--lien pour la bibliothèque BootStrap CSS locale mais pas de lien pour JS -->
-    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap.css">
     <!-- lien pour les fontes googleapis Robotocondensed -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -84,6 +84,6 @@
         </div>
     </footer>
 <!-- Bootstrap JavaScript -->/
-<script src="../js/bootstrap.bundle.min.js"></script>
+<script src="bootstrap.bundle.min.js"></script>
 </body>
 </html>
